# module-management

./: Fixities.hs  FixitiesInst.hs  GetFixities.hs  README  Setup.hs  Tests.hs  changelog  import-management.cabal  module-management.cabal
Language/Haskell/: Imports.hs  Modules.hs
Language/Haskell/Imports/: Cat.hs  Clean.hs  Common.hs  Fold.hs  FoldAnnotated.hs  Move.hs  Params.hs  Split.hs  SrcLoc.hs  SrcSpan.hs  Syntax.hs
Language/Haskell/Modules/: Cat.hs  Common.hs  Fold.hs  FoldM.hs  Imports.hs  Internal.hs  Merge.hs  ModuVerse.hs  Move.hs  Params.hs  SourceDirs.hs  Split.hs  SrcLoc.hs  Symbols.hs
Language/Haskell/Modules/Util/: DryIO.hs  IO.hs  QIO.hs  SrcLoc.hs  Symbols.hs  Temp.hs  Test.hs
Tests/: Fold.hs  Imports.hs  Main.hs  Merge.hs  Split.hs  SrcLoc.hs  Symbols.hs
Tests.old/: Fold.hs  Merge.hs  Split.hs  SrcLoc.hs  Symbols.hs
attic/: FoldAnnotated.hs
debian/: changelog
scripts/: CLI.hs  CleanModules.hs  Depends.hs
scripts/CLI/: Cabal.hs  HaskelineTransAdapter.hs
scripts/CLI/Cabal/: Instances.hs
testdata/: Equal.hs  Fold7.hs  Hiding.hs  fold5.hs  fold8.hs  fold9.hs
testdata.old/debian/Debian/NewDist/: Main.hs
testdata.old/debian/Debian/Repo/: Dependencies.hs  Fingerprint.hs  PackageID.hs  PackageIndex.hs  Prelude.hs
testdata.old/imports6/: EndComment.hs
testdata.old/imports7/: CLI.hs
testdata.old/imports7-expected/: CLI.hs
testdata.old/merge1-expected/Debian/Repo/: Cache.hs
testdata.old/merge2-expected/Debian/Repo/: AptImage.hs  Package.hs
testdata.old/merge3-expected/Debian/Repo/: AptCache.hs  AptImage.hs  Slice.hs  SourcesList.hs
testdata.old/merge4/: In1.hs
testdata.old/merge4-expected/: Out.hs
testdata.old/merge5/Apt/: Instances.hs  MonadApt.hs
testdata.old/split-merge-merge-expected/Data/Logic/: KnowledgeBase.hs
testdata.old/split2-clean-expected/Split/: Clean.hs  Instances.hs  OtherSymbols.hs
testdata.old/split2-clean-expected/Split/Internal/: Unexp.hs
testdata.old/split2-expected/Split/: Foo.hs  Instances.hs
testdata.old/split2-expected/Split/Internal/: Unexp.hs
testdata.old/split4/: Split4.hs
testdata.old/split4-expected/Split4/: BinaryPackagesOfIndex.hs  GetPackages.hs  SourcePackagesOfIndex.hs
testdata.old/split4c-expected/: Split4.hs
testdata.old/split4c-expected/Split4/: A.hs
testdata.old/split5/: B.hs  C.hs
testdata.old/split5-expected/: D.hs  E.hs
testdata.old/split5-expected/B/: A.hs  B.hs
testdata.old/split6-expected/Debian/Repo/: AptCache.hs  Package.hs
testdata/Debian/Repo/: AptCache.hs  AptImage.hs  Package.hs  SourcesList.hs
testdata/Debian/Repo/Monads/: Apt.hs
testdata/Debian/Repo/Types/: AptBuildCache.hs  PackageIndex.hs  Repo.hs
testdata/catresult/Debian/Repo/: Package.hs  PackageIndex.hs
testdata/catresult1/Debian/Repo/: Orphans.hs  Package.hs  Slice.hs  Sync.hs
testdata/catresult2/Debian/Repo/: Package.hs  Slice.hs  Types.hs
testdata/catresult3/Debian/Repo/: AptCache.hs  AptImage.hs  Package.hs  PackageIndex.hs  Slice.hs  Types.hs
testdata/debian/Debian/: Repo.hs  VersionPolicy.hs
testdata/debian/Debian/NewDist/: Options.hs  Version.hs
testdata/debian/Debian/Repo/: AptImage.hs  LocalRepository.hs  MonadOS.hs  Package.hs  Prelude.hs~  RemoteRepository.hs  Repo.hs  Slice.hs  SourceTree.hs  Top.hs
testdata/imports5/: Deriving.hs
testdata/imports7/: CLI.hs
testdata/imports7-expected/: CLI.hs
testdata/merge1-expected/Debian/Repo/: Cache.hs  Package.hs  PackageIndex.hs
testdata/merge2-expected/Debian/Repo/: AptCache.hs  Package.hs  Slice.hs  Types.hs
testdata/merge3-expected/Debian/Repo/: AptCache.hs  Package.hs  PackageIndex.hs  Types.hs
testdata/merge4/: In2.hs  M1.hs
testdata/merge5-expected/: Apt.hs
testdata/merge5/Apt/: AptState.hs  InitState.hs
testdata/merge6/: Test.hs
testdata/merge6-expected/: A.hs  Test.hs
testdata/merge6/B/: C.hs  D.hs
testdata/mergeresult1/Debian/Repo/: Cache.hs  Sync.hs
testdata/mergeresult2/Debian/Repo/: AptCache.hs  AptImage.hs  Slice.hs
testdata/mergeresult2/Text/: Format.hs
testdata/mergeresult3/Debian/Repo/: Package.hs
testdata/original/Debian/Repo/: Package.hs  Types.hs
testdata/split-cat-result/Data/Logic/: KnowledgeBase.hs  Resolution.hs
testdata/split-merge-expected/Data/Logic/: Failing.hs  Satisfiable.hs
testdata/split-merge-merge-expected/Data/: Boolean.hs
testdata/split-merge-merge-expected/Data/Boolean/: SatSolver.hs
testdata/split-merge-merge-expected/Data/Logic/: Resolution.hs
testdata/split-merge-merge-result/Data/Logic/: Resolution.hs  Satisfiable.hs
testdata/split-merge-result/Data/Logic/: Resolution.hs
testdata/split1-expected/Tmp/: File.hs
testdata/split2/: Split.hs
testdata/split2-clean-expected/: URL.hs
testdata/split2-clean-expected/Split/: Clean.hs  Foo.hs  Instances.hs  OtherSymbols.hs
testdata/split2-clean-expected/Split/Internal/: Bar.hs  Unexp.hs
testdata/split2-clean-result/Split/: Clean.hs  Foo.hs  Instances.hs  OtherSymbols.hs  ReExported.hs
testdata/split2-clean-result/Split/Internal/: Bar.hs  Unexp.hs
testdata/split2-expected/Split/: Clean.hs  Foo.hs  Instances.hs  OtherSymbols.hs
testdata/split2-expected/Split/Internal/: Bar.hs  Unexp.hs
testdata/split2-result/Split/: Clean.hs  Foo.hs  Instances.hs  OtherSymbols.hs  ReExported.hs
testdata/split2-result/Split/Internal/: Bar.hs  (+1 more)
testdata/split4-expected/Split4/: BinaryPackagesOfIndex.hs  SourcePackagesOfIndex.hs
testdata/split4b-expected/Split4/: B.hs
testdata/split4c-expected/: Split4.hs
testdata/split5/: A.hs
testdata/split5-expected/: A.hs
testdata/split6-expected/: IO.hs
tests/data/: Test1.hs  Test1.hs~
tests/data/fold3b/: Main.hs
tests/data/imports6-expected/: EndComment.hs
tests/data/imports7/: CLI.hs  CLI.hs~
tests/data/imports7-expected/: CLI.hs
tests/data/merge4-expected/: M1.hs
tests/data/merge5-expected/: Apt.hs
tests/data/merge6/: A.hs  Test.hs
tests/data/split1/: Split1.hs
tests/data/split1-expected/: Split1.hs  Split2.hs
tests/data/split4/: Split4.hs
tests/src/: Fold.hs  Imports.hs  Main.hs  Merge.hs  Split.hs  SrcLoc.hs  Symbols.hs
(+253 files in other folders)
