Name:               import-management
Version:            0.3
Synopsis:           Functions to call from Setup to minimize imports and move declarations between modules
Homepage:           https://src.seereason.com/import-management
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           haskell
Build-type:         Simple
Cabal-version:      >=1.6

Library
  ghc-Options:      -Wall -O2
  Exposed-Modules:  Language.Haskell.Imports.Clean,
                    Language.Haskell.Imports.Common,
                    Language.Haskell.Imports.Move,
                    Language.Haskell.Imports.Params,
                    Language.Haskell.Imports.Split
  Build-Depends:    applicative-extras,
                    base,
                    bytestring,
                    Cabal,
                    containers,
                    data-default,
                    directory,
                    filepath,
                    haskell-src-exts,
                    HUnit,
                    MonadCatchIO-mtl,
                    mtl,
                    pretty,
                    process,
                    pureMD5

Executable tests
  Main-is: Tests.hs
