Name:               import-management
Version:            0.4
Synopsis:           Several functions for modifying source files and managing their imports
Homepage:           https://src.seereason.com/import-management
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           haskell
Build-type:         Simple
Cabal-version:      >=1.8

Library
  ghc-Options:      -Wall -O2
  Exposed-Modules:
    Language.Haskell.Imports.Clean,
    Language.Haskell.Imports.Common,
    Language.Haskell.Imports.Fold,
    Language.Haskell.Imports.Move,
    Language.Haskell.Imports.Params,
    Language.Haskell.Imports.Split,
    Language.Haskell.Imports.Syntax,
    Language.Haskell.Imports.SrcLoc
  Build-Depends:
    applicative-extras,
    base,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    haskell-src-exts,
    HUnit,
    MonadCatchIO-mtl,
    mtl,
    pretty,
    process,
    pureMD5,
    set-extra,
    syb

Executable tests
  Build-Depends:
    base,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    HUnit,
    haskell-src-exts,
    import-management,
    MonadCatchIO-mtl,
    mtl,
    process,
    pureMD5,
    set-extra,
    syb
  Main-is: Tests.hs
