Name:               import-management
Version:            0.6
Synopsis:           Several functions for modifying source files and managing their imports
Homepage:           https://src.seereason.com/import-management
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           haskell
Build-type:         Simple
Cabal-version:      >=1.8

Library
  ghc-Options:      -Wall -O2
  Exposed-Modules:
    Language.Haskell.Modules.Cat,
    Language.Haskell.Modules.Common,
    Language.Haskell.Modules.Fold,
    Language.Haskell.Modules.Imports,
    Language.Haskell.Modules.Params,
    Language.Haskell.Modules.Split
  Build-Depends:
    applicative-extras,
    base,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    haskell-src-exts,
    HUnit,
    MonadCatchIO-mtl,
    mtl,
    pretty,
    process,
    pureMD5,
    set-extra >= 1.3.1,
    syb,
    system-fileio

Executable tests
  Build-Depends:
    base,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    HUnit,
    haskell-src-exts,
    import-management,
    MonadCatchIO-mtl,
    mtl,
    process,
    pureMD5,
    set-extra,
    syb,
    system-fileio
  Main-is: Tests.hs
