Name:               module-management
Version:            0.9.2
Synopsis:           Several functions for modifying source files and managing their imports
Homepage:           https://src.seereason.com/module-management
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           haskell
Build-type:         Simple
Cabal-version:      >=1.8

Library
  ghc-Options:      -Wall -O2
  Exposed-Modules:
    Language.Haskell.Modules,
    Language.Haskell.Modules.Fold,
    Language.Haskell.Modules.Common,
    Language.Haskell.Modules.Cat,
    Language.Haskell.Modules.Imports,
    Language.Haskell.Modules.Params,
    Language.Haskell.Modules.Split,
    Language.Haskell.Modules.Util.QIO,
    Language.Haskell.Modules.Util.Symbols,
    Language.Haskell.Modules.Util.Test,
    Language.Haskell.Modules.Util.Temp,
    Language.Haskell.Modules.Util.SrcLoc,
    Language.Haskell.Modules.Util.DryIO
  Build-Depends:
    applicative-extras,
    base,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    haskell-src-exts,
    HUnit,
    MonadCatchIO-mtl,
    mtl,
    pretty,
    process,
    pureMD5,
    set-extra >= 1.3.1,
    syb,
    system-fileio,
    temporary

-- Executable tests
--   Build-Depends:
--     ansi-wl-pprint,
--     base,
--     bytestring,
--     Cabal,
--     containers,
--     data-default,
--     debian,
--     directory,
--     Extra,
--     filepath,
--     HUnit,
--     haskell-src-exts,
--     module-management,
--     MonadCatchIO-mtl,
--     mtl,
--     process,
--     process-progress,
--     pureMD5,
--     regex-compat,
--     set-extra,
--     syb,
--     system-fileio
--   Main-is: Tests.hs
