Name:               module-management
Version:            0.20.2
Synopsis:           Clean up module imports, split and merge modules
Description:        Clean up module imports, split and merge modules.
Homepage:           https://github.com/seereason/module-management
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           Editor, Haskell, IDE
Stability:          experimental
Build-type:         Simple
Cabal-version:      >=1.9
Extra-Source-Files: changelog, scripts/CleanModules.hs, scripts/CLI/Cabal.hs, scripts/CLI/Cabal/Instances.hs, scripts/CLI/HaskelineTransAdapter.hs
                    Tests/Fold.hs, Tests/Imports.hs, Tests/Main.hs, Tests/Merge.hs, Tests/Split.hs Tests/SrcLoc.hs Tests/Symbols.hs

Flag build-tests
  Description: build the test executable
  Default: True

Library
  ghc-Options:      -Wall -O2
  Exposed-Modules:
    Language.Haskell.Modules,
    Language.Haskell.Modules.Common,
    Language.Haskell.Modules.Fold,
    Language.Haskell.Modules.Imports,
    Language.Haskell.Modules.Merge,
    Language.Haskell.Modules.ModuVerse,
    Language.Haskell.Modules.Params,
    Language.Haskell.Modules.SourceDirs,
    Language.Haskell.Modules.Split,
    Language.Haskell.Modules.Util.DryIO,
    Language.Haskell.Modules.Util.QIO,
    Language.Haskell.Modules.Util.SrcLoc,
    Language.Haskell.Modules.Util.Symbols,
    Language.Haskell.Modules.Util.Temp,
    Language.Haskell.Modules.Util.Test

  Build-Depends:
    applicative-extras,
    base >= 4 && < 5,
    bytestring,
    Cabal,
    containers,
    data-default,
    directory,
    filepath,
    haskell-src-exts,
    HUnit,
    lifted-base,
    monad-control,
    mtl,
    pretty,
    process,
    pureMD5,
    set-extra >= 1.3.1,
    syb,
    system-fileio,
    temporary

Executable hmm
  Main-is: CLI.hs
  Hs-source-dirs: scripts
  Build-Depends:
    base,
    Cabal,
    containers,
    cmdargs,
    directory,
    haskeline,
    lens,
    module-management,
    monad-control,
    mtl,
    set-extra,
    transformers-base

  -- In ghc-7.6.3, -O0 prevents one of two failures: either a GHC out
  -- of memory error, or an out of simplifier ticks error:
  -- ghc: panic! (the 'impossible' happened)
  --   (GHC version 7.6.3 for x86_64-unknown-linux):
  -- 	Simplifier ticks exhausted
  --     When trying RuleFired Class op pure
  --     To increase the limit, use -fsimpl-tick-factor=N (default 100)
  --     If you need to do this, let GHC HQ know, and what factor you needed
  --     To see detailed counts use -ddump-simpl-stats
  --     Total ticks: 1186241
  -- In 7.8.1 increasing the context stack size from 20 to 60 seems necessary.
  ghc-options: -O0 -fcontext-stack=60

Executable module-management-tests
  Hs-Source-Dirs: Tests
  Main-is: Main.hs
  Build-Depends:
    base,
    containers,
    filepath,
    HUnit,
    haskell-src-exts,
    module-management,
    process
